--- a/style.css
+++ b/style.css
@@ -3,6 +3,9 @@
     padding: 0;
     box-sizing: border-box;
 }
+/*#################################################*/
+/* Index Page */
+/*#################################################*/
 /* css code for header & body */
 body {
     font-family: 'Montserrat', sans-serif;
@@ -30,12 +33,13 @@ header {
 }
 .intro1text {
     padding-top: 55px;
-    padding-left: 8px;
     text-align: center;
 }
 .introimage {
-    margin-left: 78px;
-    margin-top: 70px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 50px;
     width: 170px;
     height: 170px;
 }
@@ -60,7 +64,7 @@ header {
 }
 /*#################################################*/
 /* About Flexbox */
-.about {
+.aboutindex {
     background-color: black;
     color: white;
     height: 500px;
@@ -84,6 +88,20 @@ header {
     padding-top: 35px;
     font-size: 30px;
     font-weight: lighter;
+    text-align: center;
+}
+.aboutbuttonouter {
+    padding-top: 50px;
+    text-align: center;
+
+}
+.aboutbutton {
+    text-decoration: none;
+    color: black;
+    background-color: white;
+    font-weight: bolder;
+    padding: 10px 20px;
+    border: 3px solid white;
 }
 /*#################################################*/
 /* Education Flexbox */
@@ -143,6 +161,7 @@ header {
     padding-top: 60px;
 }
 /*#################################################*/
+/* Work Experience */
 .exp {
     height: 250px;
     background-color: white;
@@ -203,3 +222,64 @@ header {
     font-size: 27px;
 }
 /*#################################################*/
+/* Projects Flexbox */
+.projects {
+    height: 400px;
+    background-color: white;
+    color: black;
+}
+.projecthead {
+    padding-right: 150px;
+    padding-left: 150px;
+    padding-top: 40px;
+    padding-bottom: 20px;
+    font-weight: bold;
+    font-size: 40px;
+}
+.protxt {
+    margin-bottom: 10px;
+    padding-right: 150px;
+    padding-left: 150px;
+    padding-top: 7px;
+    font-size: 27px;
+}
+
+
+/*#################################################*/
+/* About Page */
+/*#################################################*/
+.container3 {
+    display: flex;
+    flex-direction: column;
+    height: 500px;
+    background-color: white;
+    color: black;
+}
+/*#################################################*/
+.about {
+    padding-right: 150px;
+    padding-left: 150px;
+    padding-top: 50px;
+    font-weight: bolder;
+    font-size: 40px;
+}
+.aboutpagetext {
+    padding-right: 200px;
+    padding-left: 200px;
+    padding-top: 35px;
+    font-size: 23px;
+    text-align: center;
+}
+.abouttohomeouter {
+    padding-top: 50px;
+    text-align: center;
+
+}
+.abouttohome {
+    text-decoration: none;
+    color: white;
+    background-color:black;
+    font-weight: bolder;
+    padding: 15px 20px;
+    border: 3px solid black;
+}
